공통검색조건 미비사항 수정

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -93,17 +93,17 @@
                         <form>
                             <!-- TODO : 필요한 검색조건 data-selectbox-type (commonCode type에 따름)에 기입-->
                             <dl class="dropdown_checkbox" data-selectbox-type="facilityKind">
-                                <dt class="checkbox_title select">구역명</dt>
+                                <dt class="checkbox_title select_title">구역명</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="facilityKind">
-                                <dt class="checkbox_title select">장소유형</dt>
+                            <dl class="dropdown_checkbox">
+                                <dt class="checkbox_title select_title">장소유형</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>
-                            <dl class="dropdown_checkbox" data-selectbox-type="facilityKind">
-                                <dt class="checkbox_title select">행정구역</dt>
+                            <dl class="dropdown_checkbox">
+                                <dt class="checkbox_title select_title">행정구역</dt>
                                 <dd class="checkbox_list list" style="display: none;">
                                 </dd>
                             </dl>
