--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/event2.html
@@ -17,7 +17,7 @@
                 <div>
                     <p>이벤트 종류</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="eventKind">
-                        <dt class="checkbox_title select">이벤트 종류</dt>
+                        <dt class="checkbox_title select_title">이벤트 종류</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
@@ -42,7 +42,7 @@
                 <div>
                     <p>행정구역</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="district">
-                        <dt class="checkbox_title select">행정구역</dt>
+                        <dt class="checkbox_title select_title">행정구역</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
