--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventCabinet.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventCabinet.html
@@ -19,7 +19,7 @@
                         <dt>이벤트 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="eventKind">
-                                <p class="checkbox_title select" data-placeholder="이벤트 종류 선택">이벤트 종류 선택</p>
+                                <p class="checkbox_title select_title" data-placeholder="이벤트 종류 선택">이벤트 종류 선택</p>
                                 <ul class="checkbox_list list"></ul>
                             </div>
                         </dd>
@@ -52,7 +52,7 @@
                         <dt>행정구역</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="district">
-                                <p class="checkbox_title select" data-placeholder="행정구역 선택">행정구역 선택</p>
+                                <p class="checkbox_title select_title" data-placeholder="행정구역 선택">행정구역 선택</p>
                                 <ul class="checkbox_list list"></ul>
                             </div>
                         </dd>
@@ -61,7 +61,7 @@
                         <dt>장소유형</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="district">
-                                <p class="checkbox_title select" data-placeholder="장소유형 선택">장소유형 선택</p>
+                                <p class="checkbox_title select_title" data-placeholder="장소유형 선택">장소유형 선택</p>
                                 <ul class="checkbox_list list"></ul>
                             </div>
                         </dd>
