--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -15,7 +15,7 @@
                 <div>
                     <p>시설물 종류</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="facilityKind">
-                        <dt class="checkbox_title select">시설물 종류</dt>
+                        <dt class="checkbox_title select_title">시설물 종류</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
@@ -36,13 +36,13 @@
                 <div>
                     <p>개소 종류</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="stationKind">
-                        <dt class="checkbox_title select">개소 종류</dt>
+                        <dt class="checkbox_title select_title">개소 종류</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
                     <p>행정구역</p>
                     <dl class="dropdown_checkbox" data-selectbox-type="district">
-                        <dt class="checkbox_title select">시설물 방향</dt>
+                        <dt class="checkbox_title select_title">시설물 방향</dt>
                         <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
