--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventCabinet.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventCabinet.html
@@ -15,15 +15,27 @@
             <h6>스마트분전함 이벤트 검색</h6>
             <form>
                 <div>
-                    <dl class="selectbox_set">
-                        <dt>이벤트 종류</dt>
-                        <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="eventKind">
-                                <p class="checkbox_title select_title" data-placeholder="이벤트 종류 선택">이벤트 종류 선택</p>
-                                <ul class="checkbox_list list"></ul>
-                            </div>
+                    <p>이벤트 종류</p>
+                    <dl class="dropdown_checkbox">
+                        <dt class="checkbox_title select_title">이벤트 종류</dt>
+                        <dd class="checkbox_list list" style="display: none;">
                         </dd>
                     </dl>
+                    <p>행정구역</p>
+                    <dl class="dropdown_checkbox">
+                        <dt class="checkbox_title select_title">행정구역</dt>
+                        <dd class="checkbox_list list" style="display: none;">
+                        </dd>
+                    </dl>
+                    <dl class="date_set">
+                        <dt>발생 기간</dt>
+                        <dd><input type="text" id="startDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
+                        <span>부터</span>
+                        <dd><input type="text" id="endDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
+                        <span>까지</span>
+                    </dl>
+                </div>
+                <div>
                     <dl class="checkbox_set">
                         <dt>이벤트 등급</dt>
                         <dd>
@@ -35,35 +47,6 @@
 								<input type="checkbox" id="caution" name="">
 								<label for="caution"><span></span>주의</label>
 							</span>
-                        </dd>
-                    </dl>
-
-                    <dl class="date_set">
-                        <dt>발생 기간</dt>
-                        <dd><input type="text" id="startDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
-                        <span>부터</span>
-                        <dd><input type="text" id="endDt" placeholder="날짜를 입력하세요" class="input_date"></dd>
-                        <span>까지</span>
-                    </dl>
-                </div>
-                <div>
-
-                    <dl class="selectbox_set">
-                        <dt>행정구역</dt>
-                        <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="district">
-                                <p class="checkbox_title select_title" data-placeholder="행정구역 선택">행정구역 선택</p>
-                                <ul class="checkbox_list list"></ul>
-                            </div>
-                        </dd>
-                    </dl>
-                    <dl class="selectbox_set">
-                        <dt>장소유형</dt>
-                        <dd>
-                            <div class="dropdown_checkbox" data-selectbox-type="district">
-                                <p class="checkbox_title select_title" data-placeholder="장소유형 선택">장소유형 선택</p>
-                                <ul class="checkbox_list list"></ul>
-                            </div>
                         </dd>
                     </dl>
                     <dl class="checkbox_set">
@@ -83,12 +66,11 @@
 							</span>
                         </dd>
                     </dl>
-
-                    <dl class="search_text_set">
-                        <dd><input type="text" name="keyword" placeholder="검색어를 입력하세요."></dd>
-                        <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
-                        <dd class="button" id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</dd>
-                    </dl>
+                    <ul class="button">
+                        <li class="input"><input type="text" name="keyword" placeholder="검색어를 입력하세요."></li>
+                        <li id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</li>
+                        <li id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</li>
+                    </ul>
                 </div>
             </form>
         </article>
