drone with socket

--- a/danusys-drone/src/main/resources/templates/view/pages/drone.html
+++ b/danusys-drone/src/main/resources/templates/view/pages/drone.html
@@ -13,7 +13,7 @@
     <script src="./script.js"></script>
     <script src="/js/common/common.js" defer="" charset="utf-8"></script>
     <script src="/js/default/default.js" defer="" charset="utf-8"></script>
-    <script src="/js/um/frame.js" defer charset="utf-8"> </script>
+    <script src="/js/um/frame2.js" defer charset="utf-8"> </script>
 </head>
 
 <body>
