--- a/danusys-platform/src/main/resources/templates/layout/layout_login.html
+++ b/danusys-platform/src/main/resources/templates/layout/layout_login.html
@@ -10,11 +10,16 @@
 <body>
 <div class="login_wrap">
     <div class="login_visual">
-        <h2 class="login_title"><span>Gimje Fire Safety IoT Platform</span><br>김제시 화재안전 IoT플랫폼</h2>
+        <h2 class="login_title">
+            <span th:text="${@environment.getProperty('loginPage.eng.title')}"></span>
+            <br th:text="${@environment.getProperty('loginPage.kor.title')}">
+        </h2>
     </div>
-    <div class="login_form">
+    <h6 class="login_form">
         <form>
-            <h6><img src="/images/default/login_ci_gimje.svg" alt="김제시 로고"></h6>
+            <h6>
+                <img th:src="'/images/default/'+${@environment.getProperty('loginPage.logo')}">
+            </h6>
             <p>로그인을 해주세요.</p>
             <ul>
                 <li><input type="text" class="input_id" id="id" name="username" placeholder="아이디를 입력하세요." tabindex="1"></li>
