common serializeJSON checkBox & radio 예외처리

--- a/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userAccount.html
@@ -22,11 +22,11 @@
                             <dt>계정 상태</dt>
                             <dd>
                                 <span>
-                                    <input type="checkbox" id="use" name="status" data-value="0">
+                                    <input type="checkbox" id="use" name="status" data-value="0" checked>
                                     <label for="use"><span></span>사용</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="none" name="status" data-value="1">
+                                    <input type="checkbox" id="none" name="status" data-value="1" checked>
                                     <label for="none"><span></span>미사용</label>
                                 </span>
                             </dd>
