--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -89,7 +89,7 @@
                     <!-- 권한 설정 -->
                     <div class="list_search">
                         <p class="legend">권한 설정</p>
-                        <div class="list_table tableAuthorize">
+                        <div class="list_table table_authorize">
                             <table>
                                 <thead>
                                 <tr>
