--- a/danusys-platform/src/main/resources/templates/fragments/config/nav.html
+++ b/danusys-platform/src/main/resources/templates/fragments/config/nav.html
@@ -2,7 +2,8 @@
 <th:block th:fragment="navFragment">
     <aside class="accordion_menu accordion">
         <ul class="accordion">
-            <li id="one" class="multi">
+        <th:block th:with="municipality=${@environment.getProperty('municipality.name')}">
+            <li th:if="${municipality == '41210000'}" id="one" class="multi">
                 <a href="#one">스마트 가로등</a>
                 <ul class="accordion_sub_menu">
                     <li id="dimmingGroup"><a href="/pages/config/dimmingGroup">디밍 그룹 설정</a></li>
@@ -22,6 +23,7 @@
             <li id="notice">
                 <a href="/pages/config/notice">공지사항</a>
             </li>
+        </th:block>
         </ul>
     </aside>
 </th:block>
