--- a/danusys-platform/src/main/resources/templates/view/pages/stats/statistics_04.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/stats/statistics_04.html
@@ -10,11 +10,11 @@
         <i><img src="/images/default/arrowNext.svg"></i>
         <span>이벤트 발생 통계</span>
         <i><img src="/images/default/arrowNext.svg"></i>
-        <span>드론 관제 이벤트</span>
+        <span>스마트 정류장 이벤트</span>
     </h4>
     <section class="statistics_content">
         <article class="search_form">
-            <h6>드론 관제 이벤트 발생 통계 검색</h6>
+            <h6>스마트 정류장 이벤트 발생 통계 검색</h6>
             <form>
                 <div>
                     <p>이벤트 종류</p>
@@ -105,7 +105,7 @@
             </div>
             <div class="graph_contents">
                 <dl class="graph_title">
-                    <dt>드론 별 이벤트 발생 수</dt>
+                    <dt>정류장 별 이벤트 발생 수</dt>
                     <dd>
                         <span>시</span>
                         <span>일</span>
