--- a/danusys-platform/src/main/resources/static/css/reset.css
+++ b/danusys-platform/src/main/resources/static/css/reset.css
@@ -93,6 +93,7 @@ header h1{display: flex; align-items: center; justify-content: flex-start; grid-
 header h1 img{width: 34px; height: 34px;}
 header .gnm{ display: flex; align-items: center; grid-gap: 60px;}
 header .gnm li{height: 60px; line-height: 58px; box-sizing: border-box;}
+header .gnm li.active{box-sizing: border-box; border-bottom: 4px solid #3a66e5;}
 header .gnm li a{display: block; padding: 0px 14px; font-size: 18px; cursor: pointer;}
 header .gnm li:hover{box-sizing: border-box; border-bottom: 4px solid #3a66e5;}
 header .gnm li:active{}
