--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -4,11 +4,14 @@
         <!-- <h1 class="logo"><i><img src="/images/default/headerMenu.svg"></i>Title</h1> -->
         <h1><img src="/images/default/logo.svg">광명 IoT 플랫폼</h1>
         <ul class="gnm">
-            <li id="dashboard"><a href="/pages/dashboard">대시보드</a></li>
+            <th:block th:with="municipality=${@environment.getProperty('municipality.name')}">
+            <!--<li id="dashboard"><a href="/pages/dashboard">대시보드</a></li>-->
             <li id="mntr"><a href="/pages/mntr">관제</a></li>
             <li id="inqry"><a href="/pages/inqry/event1">조회/관리</a></li>
-            <li id="stats"><a href="/pages/stats/statistics_01">통계</a></li>
-            <li id="config"><a href="/pages/config/dimmingGroup">환경설정</a></li>
+            <li th:if="${municipality == '41210000'}" id="stats"><a href="/pages/stats/statistics_03">통계</a></li>
+            <li th:if="${municipality == '45210000'}" id="stats"><a href="/pages/stats/statistics_01">통계</a></li>
+            <li th:if="${municipality == '41210000'}" id="config"><a href="/pages/config/dimmingGroup">환경설정</a></li>
+            </th:block>
         </ul>
         <ul class="util_menu">
             <li><i><img src="/images/default/utmenu_login.svg"></i>admin 님</li>
