--- a/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/dimmingGroup.html
@@ -1,7 +1,4 @@
-<html lang="ko"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="layout/layout_config">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="layout/layout_config">
 
 <th:block layout:fragment="content">
     <h4>
@@ -39,218 +36,25 @@
                 <table>
                     <thead>
                     <tr>
-                        <th>_index</th>
-<th>구역관리_i_d</th>
-<th>구역이름</th>
-<th>주소</th>
-<th>데이터수집주기</th>
-<th>등주</th>
-<th>분전함</th>
-<th>스마트폴</th>
-<th>가로등</th>
-<th>보안등</th>
-<th>게이트웨이</th>
-<th>마지막수정일시</th>
-<th>상세보기</th>
-</tr>
+                        <th>index</th>
+                        <th>구역관리ID</th>
+                        <th>구역이름</th>
+                        <th>주소</th>
+                        <th>데이터수집주기</th>
+                        <th>등주</th>
+                        <th>분전함</th>
+                        <th>스마트폴</th>
+                        <th>가로등</th>
+                        <th>보안등</th>
+                        <th>게이트웨이</th>
+                        <th>마지막수정일시</th>
+                        <th>상세보기</th>
+                    </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>AREA0000</td>
-                        <td>다누대로</td>
-                        <td>다누시 다누구 다누대로</td>
-                        <td>1시간</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>000</td>
-                        <td>2021.12.21 15:49</td>
-                        <td><span class="button">상세보기</span></td>
-                    </tr>
-                    </tbody>
                 </table>
-            </div>
-            <div class="table_bottom">
-                <ul class="page_nav">
-                    <li class="prev"><i><img src="/images/default/prev.svg"></i></li>
-                    <li class="on">1</li>
-                    <li>2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li class="next"><i><img src="/images/default/next.svg"></i></li>
-                </ul>
-                <p class="button"><i><img src="/images/default/excel.svg"></i>엑셀로 내보내기</p>
             </div>
         </article>
     </section>
 </th:block>
+
 </html>
