--- a/danusys-platform/src/main/resources/static/css/board.css
+++ b/danusys-platform/src/main/resources/static/css/board.css
@@ -196,7 +196,7 @@
 .dimming_contents{flex: 1; display: flex; grid-gap: 14px;}
 .dimming_column{flex: 1; display: flex; flex-direction: column; grid-gap: 14px;}
 .dimming_column .search_list{flex: 1;}
-.dimming_contents .map{flex: 1; width: 480px; max-width: 480px; min-width: 480px; overflow: hidden; box-sizing: border-box; border-radius: 10px; background: darkseagreen;}
+.dimming_contents .map{flex: 1; width: 480px; max-width: 480px; min-width: 480px; overflow: hidden; box-sizing: border-box; border-radius: 10px; background: #282c34;}
 .setting_content article.dimmingSet{height: 284px; max-height: 284px; min-height: 284px; overflow: hidden;}
 .setting_content article.dimmingSet .article_title{margin: 0px;}
 .setting_dimming{overflow: auto; flex: 1; display: flex; flex-direction: column; justify-content: space-between;}
