--- a/danusys-platform/src/main/resources/templates/fragments/default/default.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/default.html
@@ -1,8 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="head">
-    <!--<th:block th:insert="fragments/default/includes :: includes_head(~{::pagesLink})"></th:block>-->
     <meta charset="utf-8">
-    <!--<title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">SMART-CITY 통합플랫폼</title>-->
+    <link rel="shortcut icon" th:href="${@environment.getProperty('municipality.favicon')}"/>
     <title>Iot 플랫폼</title>
     <meta name="ctx" th:content="${#httpServletRequest.getContextPath()}" />
     <meta http-equiv="Cache-Control" content="no-cache" />
